src/test/resources/automata/cocos/invalid/NotExistingTransitionSource.aut
/* (c) https://github.com/MontiCore/monticore */

automaton NotExisingTransitionSource {
  state S <<initial>>;

  a - t > s;
}
